# slintcalc

./: Cargo.toml
src/: build.rs  main.rs
ui/: ui.slint
