[package]
name = "slintcalc"
version = "0.1.0"
edition = "2021"
authors = ["Cat"]
description = "A little calculator"
license = "MIT"
documentation = "https://github.com/Vova-max-png/slintcalc"
repository = "https://github.com/Vova-max-png/slintcalc"
categories = ["Ui utility"]

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.2"

[build-dependencies]
slint-build = "1.0.0"